discoverobject: update job amounts when transactions get added

this is the complementary function to refreshInfo. when the
TransactionModel gets another transaction added we incraese the job's
amount by **exactly** 1. this allows for a trivial assertion that the
oldAmount is not at the numeric limit to prevent an overflow.

BUG: 513676
(cherry picked from commit 1dd78ff935c0a1918e977e8d232b9f6f20b3ac66)